--- a/index.html
+++ b/index.html
@@ -26,10 +26,104 @@
     <div><a href="">Юникод и HTML</a></div>
     <div><a href="">Цвета в Web (Web colors)</a></div>
     <div><a href="">WWW-Консорциум (W3C)</a></div>
-    <div>&nbsp;</div>
-    <span style="font-weight: bold;">XHTML</span>
-    <span>(</span>
-    <a href="">англ. Extensible Hypertext Markup Language</a>
-    <span>)</span>
+    <div style="margin-top: 20px;">
+        <span style="font-weight: bold;">XHTML</span>
+        <span>(</span>
+        <a href="">англ. Extensible Hypertext Markup Language</a>
+        <span> — Расширяемый язык разметки гипертекста</span>
+        <span>)</span>
+        <span>—</span>
+        <a href="">язык разметки</a>
+        <span>веб-страниц, по возможностям сопоставимый с</span>
+        <a href="">HTML,</a>
+        <span>однако является подмножеством</span>
+        <a href="">XML.</a>
+        <span>Как и HTML, XHTML соответствует спецификации</span>
+        <a href="">SGML.</a>
+        <span>Вариант XHTML 1.1 одобрен в качестве Рекомендации</span>
+        <a href="">Консорциума Всемирной паутины (W3C) 31 мая 2001 года.</a>
+    </div>
+    
+    <div style="font-size: 30px; 
+    font-weight: bold;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px">Содержание</div>
+    <div>1. <a href="" >Преимущества</a></div>
+    <div>2. <a href="">Различия между XHTML и HTML</a></div>
+    <div>3. <a href="">Версии XHTML</a></div>
+    <div>4. <a href="">Валидация XHTML документов</a></div>
+    <div>5. <a href="">См.z также</a></div>
+    <div>6. <a href="">Ссылки</a></div>
+    <div style="margin-left: 40px; margin-top: 0px;">
+        6.1
+        <a href="">Каскадные таблицы стилей (CSS)</a>
+    </div>
+    <div style="font-size: 30px; 
+    font-weight: bold;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px">Преимущества</div>
+    <div>
+        <span>- Для XHTML можно применять множество технологий, разработанных для XML. Например, </span>
+        <a href="">XSLT</a>
+        <span>и</span>
+        <a href="">XPath</a>
+    </div>
+    <div>
+        <span>- Анализ XHTML проще и быстрее, чем HTML. Поскольку синтаксис </span>
+        <a href="">XML</a>
+        <span>строже, чем </span>
+        <a href="">SGMK</a>
+        <span>, обработка XHTML возможна даже на </span>
+        <a href="">мобильных телефонах</a>
+        <span>с малыми ресурсами.</span>
+    </div>
+    <div style="font-size: 30px; 
+    font-weight: bold;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px">Различия между XHTML и HTML</div>
+    <div>
+        - Все элементы должны быть закрыты. Теги, которые не имеют закрывающего тега (например, &lt;img&gt; или &lt;br&gt;) должны иметь на конце / (например, &lt;br /&gt;). 
+    </div>
+    <div>
+        &nbsp;
+    </div>
+    <div>
+        - Булевы атрибуты записываются в развёрнутой форме. Например, следует писать &lt;option selected="selected"&gt; или &lt;td nowrap="nowrap"&gt;. 
+    </div>
+    <div>
+        &nbsp;
+    </div>
+    <div>
+        - Имена тегов и атрибутов должны быть записаны строчными буквами (например, &lt;img alt="" /&gt; вместо &lt;IMG ALT="" /&gt;). 
+    </div>
+    <div>
+        &nbsp;
+    </div>
+    <div>
+        <span>- XHTML гораздо строже относится к ошибкам в коде; &lt; и &amp; везде, даже в </span>
+        <a href="">URL</a>
+        <span>, должны замещаться &amplt; и &ampamp; соответственно. По рекомендации </span>
+        <a href="">W3C</a>
+        <span>браузеры, встретив ошибку в XHTML, должны сообщить о ней и не обрабатывать документ. Для HTML браузеры должны были попытаться понять, что хотел сказать автор.</span>
+    </div>
+    <div>
+        &nbsp;
+    </div>
+    <div>
+        <span>- Кодировкой по умолчанию является </span>
+        <a href="">UTF-8</a>
+        <span>(в отличие от HTML, где кодировкой по умолчанию является </span>
+        <a href="">ISO 8859-1</a>
+        <span>). </span>
+    </div>
+    <div>
+        &nbsp;
+    </div>
+    <div>
+        <span>Для XHTML страниц рекомендуется задавать MIME-тип — application/xhtml+xml, но это не является обязательным, более того — браузер Internet Explorer 6 и младшие версии, не смогут обрабатывать страницу, поэтому традиционно используется стандартный MIME-тип — text/html.</span>
+    </div>
 </body>
 </html>
